--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@nfte/react": "^1.0.4",
     "bootstrap": "^4.4.1",
     "next": "latest",
     "react": "^17.0.2",
