--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@nfte/react": "^1.0.4",
     "bootstrap": "^4.4.1",
-    "next": "latest",
+    "next": "^12.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^17.0.2"
